--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@qdrant/js-client-rest": "^1.15.0",
     "axios": "^1.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
     "openai": "^5.12.0"
